--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 .navtop {
   text-transform: capitalize;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 0.937vw;
   font-family: 'Open Sans', sans-serif;
   justify-content: center;
   background-color: black;
@@ -25,38 +25,26 @@
   color: white;
 }
 
-.home-title {
+.main-title {
   color: white;
   font-family: 'Open Sans', sans-serif;
   padding: 20px;
 }
 
-h1 {
-  font-size: 80px;
-  font-weight: bolder;
-}
-
-.home-subtitle {
+.main-subtitle {
   color: white;
   font-family: 'Open Sans', sans-serif;
   padding: 20px;
 }
 
-h2 {
-  font-size: 24px;
-}
-
-.home-button {
+.main-button {
+  font-family: 'Open Sans', sans-serif;
   padding-bottom: 200px;
 }
 
-.home-story {
+.main-story {
   color: white;
   font-family: 'Open Sans', sans-serif;
-}
-
-p {
-  font-size: 15px;
 }
 
 .feature1_bg {
@@ -76,7 +64,7 @@ p {
 
 .feature1_text1 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 24px;
+  font-size: 1.302vw;
   width: 30%;
   text-align: start;
   padding-left: 100px;
@@ -84,7 +72,7 @@ p {
 
 .feature1_text2 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 60px;
+  font-size: 3.21vw;
   text-transform: uppercase;
   width: 30%;
   text-align: start;
@@ -116,17 +104,13 @@ p {
 
 .feature2_text1 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 24px;
+  font-size: 1.302vw;
 }
 
 .feature2_text2 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 60px;
+  font-size: 3.125vw;
   text-transform: uppercase;
-}
-
-li {
-  font-family: 'Open Sans', sans-serif;
 }
 
 .feature3_bg {
@@ -139,6 +123,7 @@ li {
 #f3head {
   text-align: center;
   margin-bottom: 100px;
+  font-size:1.302vw;
 }
 
 .feature3 {
@@ -152,12 +137,8 @@ li {
 
 #f3req {
   text-transform: uppercase;
-  font-size: 60px;
+  font-size:3.125;
   margin:0;
-}
-
-h4 {
-  color: rgb(255, 193, 7)
 }
 
 .feature4_bg {
@@ -165,6 +146,38 @@ h4 {
   background-size: 100% 100%;
   background-repeat: no-repeat;
   height: 120vh;  
+}
+
+.feature4 {
+  height: 120vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+}
+
+.feature4_text1 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 3.125vw;
+  width: 30%;
+  text-align: start;
+  text-transform: uppercase;
+  padding-left: 100px;
+}
+
+.feature4_text2 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.041vw;
+  width: 30%;
+  text-align: start;
+  padding-left: 100px;
+  padding-top: 10px;
+}
+
+.feature4_button {
+  font-family: 'Open Sans', sans-serif;
+  padding-left: 100px;
+  padding-top: 30px;
 }
 
 .feature5_bg {
@@ -190,13 +203,44 @@ h4 {
 .navigationbot {
   text-transform: capitalize;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 1.041vw;
   font-family: 'Open Sans', sans-serif;
   justify-content: end;
   background-color: black;
 }
 
 #font-open {
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1 {
+  font-size: 4.687vw;
+  font-weight: bolder;
+}
+
+h2 {
+  font-size: 3.125vw;
+}
+
+h3 {
+  font-size: 1.562vw;
+}
+
+h4 {
+  color: rgb(255, 193, 7);
+  font-size: 1.562vw;
+}
+
+h5 {
+  font-size: 1.302vw;
+  font-weight: bold;
+}
+
+p {
+  font-size: 1.041vw;
+}
+
+li {
   font-family: 'Open Sans', sans-serif;
 }
 
