--- a/styles/styles.css
+++ b/styles/styles.css
@@ -142,17 +142,18 @@
 }
 
 .feature4_bg {
-  background-image: url("../assets/top-score-bg.png");
+  background-image: url("../assets/top-score-bg\(2\).png"), url("../assets/top-score-bg.png");
   background-size: 100% 100%;
-  background-repeat: no-repeat;
-  height: 120vh;  
+  background-repeat: no-repeat, no-repeat;
+  height: 120vh;
 }
 
 .feature4 {
   height: 120vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
+  align-content:center;
   color: white;
 }
 
@@ -203,7 +204,7 @@
 .navigationbot {
   text-transform: capitalize;
   font-weight: bold;
-  font-size: 1.041vw;
+  font-size: 0.937vw;
   font-family: 'Open Sans', sans-serif;
   justify-content: end;
   background-color: black;
@@ -233,7 +234,6 @@ h4 {
 
 h5 {
   font-size: 1.302vw;
-  font-weight: bold;
 }
 
 p {
